--- a/example/vue-demo/index.html
+++ b/example/vue-demo/index.html
@@ -6,9 +6,7 @@
     <title>vue-demo</title>
   </head>
   <body>
-    <div id="app">
-      {{message}}
-    </div>
+    <div id="app"></div>
     <script src="./dist/build.js"></script>
   </body>
 </html>
